--- a/style.css
+++ b/style.css
@@ -720,7 +720,7 @@ form {
 }
 
 .aaron {
-    background-image: url(img/);
+    background-image: url(img/aaron-fondo.jpg);
     background-position: center;
     background-size: cover;
 }
