--- a/style.css
+++ b/style.css
@@ -732,7 +732,7 @@ form {
 }
 
 .jesus {
-    background-image: url(img/);
+    background-image: url(img/jesus-fondo.jpg);
     background-position: center;
     background-size: cover;
 }
